name:                battleline
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/halogenandtoast/battleline#readme
license:             BSD3
license-file:        LICENSE
author:              Matthew Mongeau
maintainer:          halogenandtoast@gmail.com
copyright:           2017 Matthew Mongeau
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ui
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: base, battleline
  default-language:    Haskell2010

library
  hs-source-dirs:      lib
  exposed-modules:     Battleline
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends:  base
                , battleline
                , hspec

source-repository head
  type:     git
  location: https://github.com/halogenandtoast/battleline
